# learnlibuv

helloworld/: CMakeLists.txt  main.cpp
helloworld/CMake/: FindLibUV.cmake
idle-basic/: CMakeLists.txt  main.cpp
idle-basic/CMake/: FindLibUV.cmake
